# warehouse

./: .gitignore  README.md  pyproject.toml
configs/: example.json  reno_sparks_demo.json
docs/: scaling-architecture.md
scripts/: download_prototype_data.py  evaluate_footprint.py  label_prototype_data.py  merge_datasets.py  plot_eval_results.py  plot_loss_curves.py  prepare_training_data.py  train_warehouse_detector.py
src/warehouse_growth/: __init__.py  change.py  cli.py  config.py  data_sources.py  evaluation.py  labels.py  provenance.py  road_mask.py  tiling.py  training.py
src/warehouse_growth/adapters/: __init__.py  _progress.py  msft_footprints.py  naip.py  osm.py
src/warehouse_growth/models/: __init__.py  base.py  yolo.py
tests/: __init__.py  test_config.py  test_evaluation.py  test_provenance.py  test_road_mask.py  test_tiling.py
