[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-growth"
version = "0.1.0"
description = "Warehouse detection and growth measurement from satellite imagery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geopandas>=1.1.3",
  "pyarrow>=15.0",
  "pyogrio>=0.12.1",
  "rasterio>=1.3",
  "shapely>=2.1.2",
  "pyyaml>=6.0",
  "pystac-client>=0.7",
  "planetary-computer>=1.0",
  "requests>=2.31",
  "duckdb>=0.10",
  "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
models = [
  "ultralytics>=8.3",
  "mlflow>=2.13",
]

[project.scripts]
warehouse-growth = "warehouse_growth.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
